[project]
name = "PyGPTLink"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "jsonlines~=4.0.0",
    "lmstudio~=1.4.1",
    "openai~=1.97.0",
    "tiktoken~=0.9.0",
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.mypy]
strict = true

[tool.black]
line-length = 120

[dependency-groups]
dev = [
    "coverage~=7.10.0",
    "ruff>=0.14.14",
]
