[project]
name = "PyGPTLink"
version = "1.1.0"
requires-python = ">=3.11"
dependencies = [
    "jsonlines~=4.0.0",
    "lmstudio~=1.4.1",
    "openai~=1.97.0",
    "tiktoken~=0.9.0",
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
mypkg = ["py.typed"]

[tool.mypy]
strict = true

[dependency-groups]
dev = [
    "coverage~=7.10.0",
    "ruff>=0.14.14",
]
